Change overflow-x hidden value to the project section instead of the entire body to see if fixes mobile compatibility

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ html {
   line-height: 1.6;
 }
 
-body {
+#projects {
   overflow-x: hidden ;
 }
 
